RESOLVED FIXED92517
[WK2] Fix build warning in WebEventConversion.cpp
https://bugs.webkit.org/show_bug.cgi?id=92517
Summary [WK2] Fix build warning in WebEventConversion.cpp
Gyuyoung Kim
Reported 2012-07-27 10:47:25 PDT
It looks there is comparison build warning in WebEventConversion.cpp as below, WebKit::WebKit2PlatformTouchEvent::WebKit2PlatformTouchEvent(const WebKit::WebTouchEvent&)’: /home/gyuyoung/webkit/WebKit/Source/WebKit2/Shared/WebEventConversion.cpp:322:57: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
Attachments
Patch (1.43 KB, patch)
2012-07-27 10:56 PDT, Gyuyoung Kim
no flags
Patch (1.46 KB, patch)
2012-07-27 11:11 PDT, Gyuyoung Kim
no flags
Patch (1.46 KB, patch)
2012-07-27 11:12 PDT, Gyuyoung Kim
no flags
Gyuyoung Kim
Comment 1 2012-07-27 10:56:59 PDT
Chris Dumez
Comment 2 2012-07-27 11:02:37 PDT
Comment on attachment 154989 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=154989&action=review > Source/WebKit2/ChangeLog:3 > + [Wk2] Fix build warning in WebEventConversion.cpp ? > Source/WebKit2/Shared/WebEventConversion.cpp:322 > + for (unsigned i = 0; i < webEvent.touchPoints().size(); ++i) You should use size_t since this is the type returned by WTK::Vector::size()
Chris Dumez
Comment 3 2012-07-27 11:04:35 PDT
Comment on attachment 154989 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=154989&action=review >> Source/WebKit2/ChangeLog:3 >> + [Wk2] Fix build warning > > in WebEventConversion.cpp ? Also maybe "[WK2]"
Gyuyoung Kim
Comment 4 2012-07-27 11:11:09 PDT
Gyuyoung Kim
Comment 5 2012-07-27 11:12:56 PDT
Gyuyoung Kim
Comment 6 2012-07-27 11:13:34 PDT
Patch is modified.
Chris Dumez
Comment 7 2012-07-27 11:16:18 PDT
Comment on attachment 154991 [details] Patch LGTM. Thanks.
WebKit Review Bot
Comment 8 2012-07-27 12:03:26 PDT
Comment on attachment 154991 [details] Patch Clearing flags on attachment: 154991 Committed r123903: <http://trac.webkit.org/changeset/123903>
WebKit Review Bot
Comment 9 2012-07-27 12:03:31 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.