[WK2] Fix build warning in WebEventConversion.cpp https://bugs.webkit.org/show_bug.cgi?id=92517

Patch by Gyuyoung Kim <gyuyoung.kim@samsung.com> on 2012-07-27
Reviewed by Darin Adler.

There is a build warning related to comparison between signed and unsigned integer expressions.

* Shared/WebEventConversion.cpp:
(WebKit::WebKit2PlatformTouchEvent::WebKit2PlatformTouchEvent):

Canonical link: https://commits.webkit.org/110338@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123903 268f45cc-cd09-0410-ab3c-d52691b4dbfc